# weather

./: README.md  pyproject.toml  requirements.txt  setup.py
weather/: main.py
