[tool.poetry]
name = "weather"
version = "0.1.0"
description = ""
authors = ["Masaaki Miyashita <m.mysht118@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8"
pandas = "^1.5.2"
lxml = "^4.9.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
weather = "weather.main:main"
