[project]
name = "weather"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Masaaki Miyashita", email = "m.mysht118@gmail.com" }
]
dependencies = [
    "lxml==4.9.2 ; python_version >= '3.8'",
    "numpy==1.24.1 ; python_version >= '3.8'",
    "pandas==1.5.2 ; python_version >= '3.8'",
    "python-dateutil==2.8.2 ; python_version >= '3.8'",
    "pytz==2022.7.1 ; python_version >= '3.8'",
    "six==1.16.0 ; python_version >= '3.8'",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
weather = "python weather"

[tool.hatch.metadata]
allow-direct-references = true
